force-app/main/default/objects/SSOCustomFields__mdt/fields/AttributeKey__c.field-meta.xml
<CustomField>
    <fullName>AttributeKey__c</fullName>
    <description>The key to which the custom fields values are added. This will be used on the service provider for looking up values</description>
    <inlineHelpText>The key to which the custom fields values are added. This will be used on the service provider for looking up values</inlineHelpText>
    <label>AttributeKey</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>