force-app/main/default/objects/SSOCustomFields__mdt/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <description>Add the exact apiname of the field that needs to be added to custom attribute</description>
    <inlineHelpText>Add the exact apiname of the field that needs to be added to custom attribute</inlineHelpText>
    <label>FieldApiName</label>
    <length>70</length>
    <required>true</required>
    <type>Text</type>
</CustomField>