force-app/main/default/objects/SSOCustomFields__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>Object Name from which the custom fields are added to SSO. Add the exact apiName of the object</description>
    <inlineHelpText>Object Name from which the custom fields are added to SSO. Add the exact apiName of the object</inlineHelpText>
    <label>ObjectName</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>